# perceptra-detector

./: Dockerfile  README.md  create_structure.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
docs/: quickstart.md
examples/: api_client_example.py  basic_inference.py  batch_processing.py  custom_model.py  video_processing.py
perceptra_detector/: __init__.py  __version__.py
perceptra_detector/api/: models.py  server.py
perceptra_detector/backends/: __init__.py  detr.py  rf_detr.py  rt_detr.py  yolo.py
perceptra_detector/cli/: commands.py
perceptra_detector/client/: sdk.py
perceptra_detector/core/: base.py  detector.py  model_inspector.py  registry.py  schemas.py
perceptra_detector/utils/: coco_classes.py  config.py  image.py  video.py  visualization.py
tests/: test_api.py  test_backends.py  test_client.py  test_detector.py
